--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,13 +1,35 @@
 .grid-container {
   display: grid;
   grid-template-columns: 9% 10% 60% 10% 9%;
+  padding: 5px;
   background-color: #444;
-  padding: 0%;
   justify-content: center;
   align-items: center;
   align-content: center;
 }
 
+.quiz-grid-container {
+  display: grid;
+  grid-template-columns: 9% 25% 40% 15% 9%;
+  padding: 5px;
+  background-color: #444;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.faCrownClass {
+  font-size: 24px;
+  color: Gray;
+  -webkit-transition-duration: 0.3s;
+  -webkit-transition-property : transform;
+  transition-property: transform;
+}
+.faCrownClass:hover {
+    color: Gold;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
 .avatarBox {
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
