Signed-off-by: Prem Anand <prem2282@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,11 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+@media screen and (min-height: 1500px) and (max-width: 1000px) {
+
+  .App {
+    zoom: 2;
+
+  }
+}
