Signed-off-by: Prem Anand <prem2282@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,18 @@
   to { transform: rotate(360deg); }
 }
 
-@media screen and (min-height: 1500px) and (max-width: 1000px) {
+@media screen and (min-height: 1400px) and (max-width: 1000px) {
 
   .App {
-    zoom: 2;
+    zoom: 1.7;
+
+  }
+}
+
+@media screen and (min-width: 1400px) and (max-height: 1000px) {
+
+  .App {
+    zoom: 1.5;
 
   }
 }
