--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   background-color: rgb(51, 47, 47);
 }
