--- a/src/components/menu/menuPage.css
+++ b/src/components/menu/menuPage.css
@@ -207,7 +207,7 @@
 
 }
 
-@media screen and (min-width: 700px) and (max-width: 1200) {
+@media screen and (min-width: 700px) and (max-width: 1200px) {
     .resultGrid {
           grid-template-columns: 40% 40%;
     }
