--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  /* background-color: #E1DDD8; */
   /* font-family: Arial, Helvetica, sans-serif; */
   background-color: rgb(51, 47, 47);
 }
