--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -9,10 +9,38 @@
   background-color: #E1DDD8;
 }
 
-.backButton{
-  width: 100px;
-  margin: 0px;
+.dummyDiv {
+
+    height: 300px;
+    background-color: #C3BBB2;
+    /*background-color: yellow;*/
+}
+.buttonContainer {
+  /*position:fixed !important;
+  position:absolute;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;*/
+  display: flex;
+  align-items: center;
+  align-content: space-around;
   justify-content: space-around;
+  /*grid-template-columns: 100%;*/
+}
+
+.backButton{
+  position:fixed !important;
+  position:absolute;
+  /*top:0;*/
+  /*right:0;*/
+  bottom:0;
+  left:0;
+  width: 25%;
+  height: 50px;
+  margin: 0px;
+  justify-content: space-between;
+  align-self: center;
 }
 
 .shareBar {
@@ -25,6 +53,7 @@
   justify-content: space-around;
   background-color: #E1DDD8;
 }
+
 
 
 .getStartedContainer {
@@ -78,6 +107,10 @@
   color: Gainsboro;
   font-size: 20px;
 }
+.guestButton:hover{
+  color:  DarkSlateGray;
+  background-color:  Gainsboro;
+}
 
 .premiumButton {
   margin: 10px;
@@ -115,12 +148,15 @@
 }
 
 .outerCatGrid {
+
   display: grid;
   grid-template-columns: 100%;
-  justify-content:  space-around;
+  height:  auto;
+  justify-content:  space-between;;
+  align-items: center;
   /*background-color: #D7D1CB;*/
   background-color: #C3BBB2;
-  padding: 10px;
+  padding: 2px;
 }
 
 .outerBox {
@@ -135,11 +171,24 @@
   margin: 10px;
 }
 
+.oneBoxGrid {
+  display: grid;
+  grid-template-columns: 100%;
+  align-items: center ;
+}
+
+.twoBoxGrid {
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
+
 .outerCatBox {
   /*background: #307B93;*/
+  /*display: flex;*/
+  /*grid-template-columns: 80% 20%;*/
   background: transparent;
-  padding: 5px;
-  margin: 5px;
+  padding: 2px;
+  margin: 2px;
   border-radius: 10px;
 
 }
