--- a/src/components/menu/pmpStyles.css
+++ b/src/components/menu/pmpStyles.css
@@ -155,6 +155,7 @@
   align-content: center;
   justify-content: space-between;
   align-content: space-around;
+  background-color: DarkSlateGray;
   margin: 5px;
   padding: 5px;
   border-width: 1px;
