--- a/src/components/menu/quizDetails.css
+++ b/src/components/menu/quizDetails.css
@@ -12,6 +12,35 @@
   padding: 5px;
 }
 
+.matchType {
+  display: grid;
+  grid-template-columns: 5% 30% 30% 30%;
+  background: #333;
+  margin: 2px;
+}
+
+.matchTypeQuestion {
+  color: Aqua;
+  padding: 5px;
+  margin: 5px;
+  font-size: 16px;
+}
+
+.matchTypeAnswer {
+  color: Gold;
+  padding: 5px;
+  margin: 5px;
+  font-size: 16px;
+}
+
+.matchTypeWrongAnswer {
+  color: Red;
+  padding: 5px;
+  margin: 5px;
+  font-size: 16px;
+  text-decoration: line-through;
+}
+
 .resultTopBox100 {
   display: grid;
   grid-template-columns: 30% 30% 30%;
