--- a/src/components/questions/questionStyle.css
+++ b/src/components/questions/questionStyle.css
@@ -8,7 +8,7 @@
 
 .matchTypeContainer{
   display: grid;
-  grid-template-columns: 40% 40%;
+  grid-template-columns: 60% 40%;
   justify-content: center;
   margin: 5px;
 
@@ -101,7 +101,7 @@
 
 .listTypeContainer {
   display: grid;
-  grid-template-columns: 10% 50% 40%;
+  grid-template-columns: 60% 40%;
 }
 
 .listTypeQuest1 {
@@ -158,15 +158,16 @@
 
   position: absolute;
   top: 10%;
-  bottom: 5%;
+  bottom: 0%;
   display: grid;
   grid-template-columns: 50% 50%;
-  height: 100%;
+  height: 90%;
   width: 100%;
   padding: 5px;
   border-color: white;
   /* background-color: DarkSlateGray; */
   background-color: transparent;
+  background-position: center;
   border-radius: 10px;
   align-self: center;
   justify-content: space-between;
@@ -330,7 +331,7 @@
   }
 
   .matchTypeContainer{
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 60% 40%;
   }
 
   .questionContainer{
