--- a/src/components/menu/historyStyles.css
+++ b/src/components/menu/historyStyles.css
@@ -8,7 +8,21 @@
   align-content: space-around;
   margin: 10px;
 }
-
+.historyEmptyContainter {
+  position: absolute;
+  display: grid;
+  top: 10%;
+  bottom: 0%;
+  height: 90%;
+  width: 100%;
+  grid-template-columns: 100%;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  padding: 10px;
+  align-content: space-around;
+  margin: 10px;
+}
 
 
 @media screen and (max-width: 550px) {
