--- a/src/components/questions/questionStyle.css
+++ b/src/components/questions/questionStyle.css
@@ -152,7 +152,23 @@
 
 }
 
-
+.countContainer {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  display: grid;
+  grid-template-columns: 100%;
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  background-color: transparent;
+  background-position: center;
+  border-radius: 10px;
+  align-self: center;
+  justify-content: space-between;
+  align-items: center;
+  background-size: contain;
+}
 
 .questionContainer{
 
